# ExtractFeature

./: .flake8  .isort.cfg  .pylintrc  Makefile  README.md  auto_run.sh  config.yaml  main.py  pyproject.toml  requirements.txt  run_check_before_commit.sh
.github/workflows/: project_ci.yaml
data/: customers.csv
extractfeature/: __init__.py  config.py  extractor.py  main.py
extractfeature/tests/: test_extractfeature.py
extractfeature/tests/config/: sample_config.yaml
extractfeature/utils/: custom_logger.py  customlogger.py  utils.py
